fixed reply editor not showing on mobile screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -440,7 +440,7 @@ body {
     display: none;
   }
 
-  .feed_content_search {
+  .header_mobile {
     position: fixed;
     top: 4rem;
     left: 0;
